# jobcv

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: jd_backend.txt  jd_data.txt  jd_devops.txt  jd_frontend.txt  resume.txt
jobcv/: __init__.py  api.py  ats.py  cli.py  extract.py  llm.py  report.py
tests/: test_ats.py  test_cli.py  test_report.py
web/: app.js  index.html  style.css
