[project]
name = "jobcv"
version = "0.1.0"
description = "AI resume optimizer with ATS keyword matching — DeepSeek by default, local Ollama or any OpenAI-compatible backend."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []  # core is zero-dependency (stdlib only)

[project.optional-dependencies]
zh = ["jieba"]                              # better Chinese keyword segmentation
files = ["pypdf>=4.0", "python-docx>=1.1"]  # parse uploaded PDF / DOCX resumes
api = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]  # HTTP API + 网页版
dev = ["pytest", "jieba", "fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9", "pypdf>=4.0", "python-docx>=1.1", "build"]

[project.urls]
Homepage = "https://github.com/lnter-VPN/jobcv"
Repository = "https://github.com/lnter-VPN/jobcv"

[project.scripts]
jobcv = "jobcv.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jobcv"]
force-include = { "web" = "jobcv/web" }
